Changes to speaker note formatting

--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -34,30 +34,24 @@ pose these questions to fellow teachers.
 ""  
 In previous sessions we saw that we have raw data in the warehouse.   
 What should we do it?  
-""   
 --
 
 Model it!
 
 ???
-""  
 We should model it!  
-""  
 --
 
 .grey[_How?_]
 
 ???
-""  
 and how are we going to model it?  
-""  
 --
 
 With dbt!
 
 ???
-""  
-With dbt of course!
+With dbt of course!  
 ""  
 --
 
@@ -89,14 +83,15 @@ But first, we need to know what we mean by "model it". It's a broad term!
 
 ???
 ""  
-There's two main things we could mean when we say "model it". The first thing
-it could mean is that there's a set of final artifacts you want to share with 
-stake holders.  
+There's two main things we could mean when we say "model it". The first thing it  
+could mean is that there's a set of final artifacts we want to share with stakeholders.  
 
-This is also known as data model design, data warehouse design, or warehousing,
-and choosing how you do it is a careful balance of trade-offs which your team
-will need to consider. There's numerous methodologies and books on this topic, 
-and while it's fascinating, we'll only be covering this breifly.  
+This is also known as data model design, data warehouse design, or warehousing.  
+Choosing how we'll do it is a careful balance of trade-offs which our team will  
+need to consider.  
+
+There's numerous methodologies and books on this topic, and while it's fascinating,  
+we'll only be covering this subject breifly.  
 ""  
 --
 
