More speaker note formatting

--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -91,8 +91,7 @@ Choosing how we'll do it is a careful balance of trade-offs which our team will
 need to consider.  
 
 There's numerous methodologies and books on this topic, and while it's fascinating,  
-we'll only be covering this subject breifly.  
-""  
+we'll only be covering this subject briefly.  
 --
 
 **2. I need a reliable, scalable, intuitive process for generating those final artifacts.**
@@ -100,13 +99,11 @@ we'll only be covering this subject breifly.
 - The _real_ interest of this presentation
 
 ???
-""  
-The second thing it could mean is that you need a reliable, scalable, and
+The second thing it could mean is that you need a reliable, scalable, and  
 intuitive process for creating those artifacts.  
-  
-We can do that with dbt, and that's the real interest of this presentation!  
-""  
 
+We can do that with dbt - and that's the real interest of this presentation!  
+""  
 ---
 
 class: subtitle, center, middle
