More note formatting

--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -113,8 +113,8 @@ class: subtitle, center, middle
 
 ???
 ""  
-Let's get back to the first point - the final data artifacts. In other words,
-we're asking ourselves: "What is the table or view I'm trying to build?"  
+So, let's start with our first point - the final data artifacts. The question  
+we're aiming to answer is "what is the table or view I'm trying to build?"  
 ""  
 
 ---
@@ -127,19 +127,17 @@ is our task to determine for the present day which concepts are still relevant.
 
 ???
 ""  
-Our viewpoint here is that there is no one right answer, but there are good
-practices to get there.  
+Our viewpoint here is that there is no one right answer, but there are good  
+practices we have at our disposal to get there.  
   
-As modern data practitioners, it's our duty to determine which practices from
+As modern data practitioners, it's our duty to determine which practices from  
 our decades-long history are still relevant and useful today.  
-""   
 
 --
 
 Let's break down the process...
 
 ???
-""  
 So, let's break it down -  
 ""  
 ---
@@ -165,7 +163,8 @@ SVP Marketing Analytics
 
 ???
 ""  
-Let's go back to 1998. We've got mail: [ read slide ]  
+Let's go back to 1998. We've got mail:  
+[> Read Slide <]  
 ""  
 
 ---
@@ -183,22 +182,20 @@ Let's go back to 1998. We've got mail: [ read slide ]
 
 ???
 ""  
-This is our desired output - You can see that we've got a table with a row per
+This is our desired output - You can see that we've got a table with one row per  
 brand and country combination, with an aggregate of the units sold.  
-""  
 
 --
 
 What is the query you (the analyst) will write to get these results?
 
 ???
-""  
-Let's pause here, close our eyes, and imagine the query you would write
-in 1998 to get these results!  
+Let's pause here, close our eyes, and imagine the query we would write in 1998  
+to get these results.  
 ""  
   
 [Teacher note:]  
-You should actually pause here for a few seconds to allow everyone to think 
+You should actually pause here for a few seconds to allow everyone to think  
 about this!  
   
 --
